opsimath/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opsimath-ts
  namespace: opsimath
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: opsimath-web
      port:
        number: 80
  tls:
    - hosts:
        - opsimath
